<resources>
    <string name="app_name">Guardian Search</string>
    <string name="List">List</string>
    <string name="search">Search</string>
    <string name="textview">SearchBox</string>
    <string name="searchFiler">Type Search Here</string>
    <string name="guardianSearchBtn">Search Guardian News</string>
    <string name="deleteSearchSB">Delete</string>
    <string name="searchItemAD">Details</string>
    <string name="searchItemADTitle">Details</string>
    <string name="searchAlertTitle">Search Details</string>
    <string name="searchAlertMessage">Search Details:</string>
    <string name="searchAlertDelete">Delete</string>
    <string name="searchAlertDismiss">Dismiss</string>
    <string name="searchItemTitle">Title</string>
    <string name="app_logo">App Logo</string>
    <string name="searchToast">Searching Guarding News</string>
    <string name="searchItemSection">Section</string>
    <string name="searchItemUrl">URL</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="user">User Profile</string>
    <string name="help">Help</string>
    <string name="versionNumber">v1.2</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="guardianSearchActName">Search Guardian News</string>
    <string name="mainActName">Home</string>
    <string name="searchHelpMsg">Enter Search into TextBox and click Search \nClick on Search items and then Url to view
        items \nClick on Delete to delete item from list
    </string>
    <string name="mainHelpMsg">This is the home view, you can access all the features we offer from here!</string>
    <string name="unavailableFeature">Unavailable Future Feature</string>
    <string name="userActivityName">User Settings</string>
    <string name="favouritesActivityName">Favourites</string>
    <string name="userName">Username:</string>
    <string name="allowFavourites">Allow favourites</string>
    <string name="userNameHint">Click to change username</string>
    <string name="userAlertHint">Enter User Name</string>
    <string name="save">Save</string>
    <string name="userActivityHelp">Click on username to edit username \nClick checkbox to allow favourites (default
        allowed) \nClick clear favourites to delete all saved favourites
    </string>
    <string name="favouritesSnackMsg">Favourites is turned</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="clearFavourites">Clear Favourites</string>
    <string name="addToFavourite">Add to Favourite</string>
    <string name="success">Added Successfully</string>
    <string name="deleteSuccess">Deleted Successfully</string>
    <string name="webViewHelpMsg">Your article is displayed here</string>
    <string name="webViewActivityName">Web Browser</string>
    <string name="noFavouritesFound">No favourites Found</string>
    <string name="favouritesHelpMsg">Your favourite articles are listed here. Click article to delete it from list!
    </string>
</resources>