<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:openDrawer="start">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/app_logo"/>

            <!--Logo created on logomakr.com -->

            <EditText
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/searchFilter"
                    android:hint="@string/searchFiler"
                    android:imeOptions="actionSearch"
                    android:inputType="textAutoCorrect|textFilter"
            />
            <Button
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:text="@string/guardianSearchBtn"/>
        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                app:headerLayout="@layout/header"
                app:menu="@menu/nav_menu"
                android:id="@+id/nav_view"
                android:background="@color/primaryBgColor"/>
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>