<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="10dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/searchItemSection"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/searchAlertSectionView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/searchItemTitle"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/searchAlertTitleView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/searchItemUrl"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/searchAlertUrlView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:clickable="true"
                android:textAlignment="center"
                android:textColor="#0281E6"
                android:textStyle="italic"/>

    </LinearLayout>

</LinearLayout>